{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 48,
  "lineage": "83221f35-744f-f318-028d-1fba5c3ca2ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032b5b0b11fc4c51d",
            "arn": "arn:aws:ec2:eu-central-1:990393187402:elastic-ip/eipalloc-032b5b0b11fc4c51d",
            "association_id": "eipassoc-0c2adc94250a7b70e",
            "domain": "vpc",
            "id": "eipalloc-032b5b0b11fc4c51d",
            "instance": "i-09097f70c09f9913a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d9dfad208c888e1e",
            "private_dns": "ip-10-40-1-145.eu-central-1.compute.internal",
            "private_ip": "10.40.1.145",
            "public_dns": "ec2-63-185-205-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.185.205.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-eip",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-eip",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2_ssm",
            "aws_iam_role_policy.ec2_artifact_read",
            "aws_iam_role_policy_attachment.codedeploy_ec2",
            "aws_iam_role_policy_attachment.ssm_core",
            "aws_instance.app",
            "aws_s3_bucket.deploy_artifacts",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae2eb6210612f5a0",
            "arn": "arn:aws:ec2:eu-central-1:990393187402:instance/i-09097f70c09f9913a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "covid19map-dev-ec2-profile",
            "id": "i-09097f70c09f9913a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "covid19map-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9dfad208c888e1e",
            "private_dns": "ip-10-40-1-145.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.1.145",
            "public_dns": "ec2-63-185-205-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.185.205.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-central-1:990393187402:key/bd15e356-937d-4e35-bc8e-fe95f70bc73b",
                "throughput": 125,
                "volume_id": "vol-03af277ae19e9f9f0",
                "volume_size": 16,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3ac7d4ae8b19cc5",
            "tags": {
              "CodeDeployGroup": "covid19map-dev",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-ec2",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "CodeDeployGroup": "covid19map-dev",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-ec2",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de085ac45ba6d1fb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2_ssm",
            "aws_iam_role_policy.ec2_artifact_read",
            "aws_iam_role_policy_attachment.codedeploy_ec2",
            "aws_iam_role_policy_attachment.ssm_core",
            "aws_s3_bucket.deploy_artifacts",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:990393187402:internet-gateway/igw-04b6a9b60aa5d7170",
            "id": "igw-04b6a9b60aa5d7170",
            "owner_id": "990393187402",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-igw",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-igw",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "vpc_id": "vpc-076a499eef5b68d00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b6a9b60aa5d7170",
            "id": "r-rtb-0eecf5b81ddb2a3971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eecf5b81ddb2a397",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:990393187402:route-table/rtb-0eecf5b81ddb2a397",
            "id": "rtb-0eecf5b81ddb2a397",
            "owner_id": "990393187402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b6a9b60aa5d7170",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-public-rt",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-public-rt",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a499eef5b68d00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bb3c9904ec16712",
            "route_table_id": "rtb-0eecf5b81ddb2a397",
            "subnet_id": "subnet-0a3ac7d4ae8b19cc5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:990393187402:security-group/sg-0de085ac45ba6d1fb",
            "description": "Security group for Covid19Map EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de085ac45ba6d1fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Application access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "covid19map-dev-app-sg",
            "name_prefix": "",
            "owner_id": "990393187402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-app-sg",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-app-sg",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a499eef5b68d00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:990393187402:subnet/subnet-0a3ac7d4ae8b19cc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3ac7d4ae8b19cc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990393187402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-public-subnet",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-public-subnet",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "vpc_id": "vpc-076a499eef5b68d00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:990393187402:vpc/vpc-076a499eef5b68d00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-02250c7f7bb645be0",
            "default_route_table_id": "rtb-0593d658d6f1ba142",
            "default_security_group_id": "sg-01d3048f1907132ef",
            "dhcp_options_id": "dopt-086723e7339a94c98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076a499eef5b68d00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0593d658d6f1ba142",
            "owner_id": "990393187402",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-vpc",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "covid19map-dev-vpc",
              "Owner": "rafal-wojcicki",
              "Project": "covid19map"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}